<resources>
    <string name="app_name">MU Chart SSBU</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">MU Chart SSBU</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="fox">Fox</string>
    <string name="Kazuya">Kazuya</string>
    <string name="picture_of_fox">picture_of_fox</string>
    <string name="textView">FOX</string>
    <string name="picture_of_kazuya">picture_of_kazuya</string>
    <string name="picture_of_metaknight">picture_of_metaknight</string>
    <string name="picture_of_byleth">picture_of_byleth</string>
    <string name="picture_of_marth">picture_of_marth</string>
    <string name="picture_of_diddy">picture_of_diddy</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>